--- a/ads-project/app/css/app.css
+++ b/ads-project/app/css/app.css
@@ -1,3 +1,12 @@
+* {
+	margin: 0;
+	padding: 0;
+}
+
+body {
+	background: #e2f0d9;
+}
+
 #registrationForm {
 	margin-left: auto;
     margin-right: auto;
