--- a/ads-project/app/templates/register.html
+++ b/ads-project/app/templates/register.html
@@ -26,6 +26,7 @@
 				<input type="text" name="registerTown">
 			</label><br>
 			<button type="submit" id="registerBtn">Register</button>
+			<a href="#/login">Login here</a>
 		</form>
 	</div>
 </div>
