--- a/ads-project/app/css/app.css
+++ b/ads-project/app/css/app.css
@@ -70,3 +70,11 @@ a {
 	height: 150px;
 }
 
+footer {
+	background-color: #a9d18e;
+	height: 30px;
+	font-weight: bold;
+	text-align: center;
+	padding: 5px; 
+}
+
