--- a/ads-project/app/css/app.css
+++ b/ads-project/app/css/app.css
@@ -4,6 +4,7 @@
 }
 
 body {
+	height:100%;
 	background: #e2f0d9;
 }
 
@@ -70,11 +71,23 @@ a {
 	height: 150px;
 }
 
-footer {
-	background-color: #a9d18e;
+#wrapper {
+	min-height:100%;
+}
+
+#content {
+	padding-bottom:100px; /* Height of the footer element */
+}
+
+#footer {
+	background: #a9d18e;
+	width: 100%;
 	height: 30px;
 	font-weight: bold;
 	text-align: center;
+	position: fixed;
 	padding: 5px; 
+	bottom: 0;
+	left: 0;
 }
 
