--- a/ads-project/templates/login.html
+++ b/ads-project/templates/login.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>Login Page</title>	
-	</head>
-	<body>
+<div ng-include="'templates/header.html'"></div>
+<div class="col-md-2" id="navigationPanel">
+	<left-public-sidebar></left-public-sidebar>	
+</div>
 		<div id="wrapper">
 			<div id="header">
 			</div>
