--- a/ads-project/templates/public/left-sidebar.html
+++ b/ads-project/templates/public/left-sidebar.html
@@ -1,12 +1,13 @@
 <div>
-	<h2>Navigation</h2>
-	<a href="#/">Home</a>
-
-	<div>
+	<div class="navigationPanel">
+		<h3>Navigation</h3>
+		<a href="#/"><button class="buttonNavigation">Home</button></a>
+	</div>
+	<div class="navigationPanel">
 		<h5>To publish a new ad, please login.</h5>
 		<ul>
-			<li><a href="#/login">Login</a></li>
-			<li><a href="#/register">Register</a></li>
+			<li><a href="#/login"><button class="buttonNavigation">Login</button></a></li>
+			<li><a href="#/register"><button class="buttonNavigation">Register</button></a></li>
 		</ul>
 	</div>
 </div>
