--- a/ads-project/templates/register.html
+++ b/ads-project/templates/register.html
@@ -1,3 +1,7 @@
+<div ng-include="'templates/header.html'"></div>
+<div class="col-md-2" id="navigationPanel">
+	<left-public-sidebar></left-public-sidebar>	
+</div>
 <div id="centerRegisterForm">
 	<div id="registrationForm">
 		<link rel="stylesheet" href="css/app.css">
@@ -29,7 +33,7 @@
 					<option value="">Sofia</option>
 				</select>
 			</label><br>
-			<button type="submit" id="registerBtn" ng-click="register(user)">Register</button>
+			<button type="submit" class="registerBtn" ng-click="register(user)">Register</button>
 			<a href="#/login">Login here</a>
 		</form>
 	</div>
