--- a/ads-project/templates/home.html
+++ b/ads-project/templates/home.html
@@ -1,15 +1,13 @@
-<header>
-	<h1>Ads - {{pageTitle}}</h1>
-</header>
+<div ng-include="'templates/header.html'"></div>
 <div id="wrapper">
 	<div class="row">
-		<div class="col-md-3">
+		<div class="col-md-2" id="navigationPanel">
 			<left-public-sidebar></left-public-sidebar>	
 		</div>
-		<div class="col-md-6">
+		<div class="col-md-8">
 			<public-ads></public-ads>
 		</div>
-		<div class="col-md-3">
+		<div class="col-md-2">
 			<categories></categories>
 			<towns></towns>
 		</div>
