--- a/ads-project/templates/home.html
+++ b/ads-project/templates/home.html
@@ -1,5 +1,5 @@
 <div ng-include="'templates/header.html'"></div>
-<div id="wrapper">
+<div id="wrapper2">
 	<div class="row">
 		<div class="col-md-2" id="navigationPanel">
 			<left-public-sidebar></left-public-sidebar>	
