--- a/ads-project/templates/public/logged-in-sidebar.html
+++ b/ads-project/templates/public/logged-in-sidebar.html
@@ -1,8 +1,9 @@
 <div id="loggedInSidebar">
+	<h3>Navigation</h3>
 	<ul>
 		<li><a href="#/">Home</a></li>
 		<li><a href="#/user/ads">My Ads</a></li>
-		<li><a href="#/user/ads/publish">Publish new ads</a></li>
-		<li><a href="#/user/editProfile">Edit profile</a></li>
+		<li><a href="#/user/ads/publish">Publish New Ads</a></li>
+		<li><a href="#/user/editProfile">Edit Profile</a></li>
 	</ul>
 </div>
