--- a/ads-project/templates/public/towns.html
+++ b/ads-project/templates/public/towns.html
@@ -1,7 +1,7 @@
 <div id="towns">
 	<h3>Towns</h3>
 	<ul>
-		<li ng-repeat="town in towns">
+		<li ng-repeat="town in towns" ng-click="townClicked(town)">
 			{{town.name}}
 		</li>
 	</ul>
