fixing errors in login.html and register.html

--- a/ads-project/templates/login.html
+++ b/ads-project/templates/login.html
@@ -1,30 +1,28 @@
- <div ng-include="'templates/header.html'"></div>
+<div ng-include="'templates/header.html'"></div>
 <div class="col-md-2" id="navigationPanel">
-	<left-public-sidebar></left-public-sidebar>	
+	<div ng-include="'templates/public/left-sidebar.html'" ng-if="!isLoggedIn"></div>
+	<div ng-include="'templates/public/logged-in-sidebar.html'" ng-if="isLoggedIn"></div>		
 </div>
-		<div id="wrapper">
-			<div id="header">
-			</div>
-			<div id="content">
-				<div id="loginForm">
-					<h3>Login</h3>
-					<hr>
-					<form>
-						<label>Username:<br>
-							<input type="text" name="loginUsername" ng-model="user.username" required />
-						</label><br>
-						<label>Password:<br>
-							<input type="password" name="loginPassword" ng-model="user.password" required />
-						</label>
-					
-					<button type="submit" id="loginBtn" ng-click="login(user)">Login</button>
-					<a href="#/register">Register here</a>
-					</form>
-				</div>
-			</div>
-			<div id="footer" ng-include="'templates/footer.html'">
-			</div>
+<div id="wrapper">
+	<div id="header">
+	</div>
+	<div id="content">
+		<div id="loginForm">
+			<h3>Login</h3>
+			<hr>
+			<form>
+				<label>Username:<br>
+					<input type="text" name="loginUsername" ng-model="user.username" required />
+				</label><br>
+				<label>Password:<br>
+					<input type="password" name="loginPassword" ng-model="user.password" required />
+				</label>
+			<button type="submit" id="loginBtn" ng-click="login(user)">Login</button>
+			<a href="#/register">Register here</a>
+			</form>
 		</div>
-	</body>
-</html>
+	</div>
+	<div id="footer" ng-include="'templates/footer.html'">
+	</div>
+</div>
 
