--- a/ads-project/styles/styles.css
+++ b/ads-project/styles/styles.css
@@ -137,6 +137,7 @@ header {
 	border-radius: 5px;
 	border: 1px solid black;
 	margin-bottom: 10px;
+	margin-right: 20px;
 	font-family: Georgia;
 	font-weight: bold;
 }
@@ -212,6 +213,7 @@ ul li {
 	color: black;
 	text-decoration: none;
 }
+
 
 
 
