adding functionality to "All" button in category and town filters

--- a/ads-project/templates/public/towns.html
+++ b/ads-project/templates/public/towns.html
@@ -1,6 +1,9 @@
 <div id="towns">
 	<h3>Towns</h3>
 	<ul>
+		<li ng-click="townClicked(towns)">
+			All
+      	</li>
 		<li ng-repeat="town in towns" ng-click="townClicked(town)">
 			{{town.name}}
 		</li>
