--- a/ads-project/templates/public/categories.html
+++ b/ads-project/templates/public/categories.html
@@ -1,7 +1,9 @@
 <div id="categories">
 	<h3>Categories</h3>
-	<a ng-click="logout()">Logout</a>
 	<ul>
+		<li ng-click="categoryClicked(categories)">
+			All
+      	</li>
 		<li ng-repeat="category in categories" ng-click="categoryClicked(category)">
 			{{category.name}}
 		</li>
