--- a/ads-project/templates/public/left-sidebar.html
+++ b/ads-project/templates/public/left-sidebar.html
@@ -1,7 +1,7 @@
 <div>
 	<div class="navigationPanel">
 		<h3>Navigation</h3>
-		<a href="#/"><button class="buttonNavigation">Home</button></a>
+		<a href="#/"><button class="buttonNavigation" id="homeBtn">Home</button></a>
 	</div>
 	<div class="navigationPanel">
 		<h5>To publish a new ad, please login.</h5>
