--- a/ads-project/styles/styles.css
+++ b/ads-project/styles/styles.css
@@ -60,7 +60,7 @@ h2, h3 {
     margin-right: 45px;
 }
 
-#loginBtn {
+#loginBtn, #publishBtn {
 	width: 80px;
 	height: 30px;
 	border-radius: 5px;
@@ -222,6 +222,15 @@ ul li {
 
 #homeBtn {
 	margin-left: 20px; 
+}
+
+#publishAdForm {
+	margin-left: auto;
+    margin-right: auto;
+	width: 40%;
+	background-color: #a9d18e;
+	border-radius: 20px;
+	border: 1px solid green;
 }
 
 
